Adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima ipsam, quisquam sequi magnam distinctio dolorem ipsa porro, dolore nemo animi est debitis fuga autem aliquid aut, recusandae natus perspiciatis in?
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, inventore? Nemo inventore aperiam perferendis porro a nostrum id adipisci, eius fugiat doloribus hic quidem et ea. Porro magnam libero facilis!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium a est dolore vel autem, vero similique eveniet eius. Cumque quo architecto dolore necessitatibus praesentium optio omnis ab aspernatur, laudantium hic.</p>
 </body>
 </html>
